[tool.poetry]
name = "cloudstile"
version = "2.0.1"
description = "Unofficial Cloudflare Turnstile library for Python with async and sync support."
authors = ["NotAussie <notaussie@duck.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/notaussie/cloudstile"
keywords = ["cloudflare", "turnstile", "captcha"]
classifiers = [
    "Framework :: Pydantic",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Security",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Operating System :: OS Independent"
]

[tool.poetry.dependencies]
python = "^3.10"
httpx = "0.28.1"
typing-extensions = "4.15.0"
pydantic = "2.12.5" 

[tool.poetry.group.lint.dependencies]
pylint = "^4.0.4"
black = "^26.1.0"

[tool.poetry.group.types.dependencies]
mypy = "^1.17.0"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.1.0"
sphinx-rtd-theme = "^3.1.0"

[tool.poetry.group.tests.dependencies]
pytest-asyncio = "^1.1.0"
pytest-emoji = "^0.2.0"
pytest-cov = "^7.0.0"
pytest-md = "^0.2.0"
pytest = "^9.0.2"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
